Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5315

Cast to timestamp fails for YYYY-M-D format

    XMLWordPrintableJSON

Details

    Description

      Dates with single digit months or days should cast to valid timestamps.

      This returns NULL since it fails but should be valid.

      impala> select cast('2000-3-1' as timestamp);
      +--------------------------------+
      | cast('2000-3-1' as timestamp)  |
      +--------------------------------+
      | NULL                           |
      +--------------------------------+
      

      Postgres

      grahn=# select cast('2000-3-1' as timestamp);
            timestamp
      ---------------------
       2000-03-01 00:00:00
      

      Attachments

        Issue Links

          Activity

            People

              thundergun Vincent Tran
              grahn Greg Rahn
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: