tests/query_test/test_scanners.py
@@ -855,3 +855,25 @@ class TestScanTruncatedFiles(ImpalaTestSuite):
     result = self.execute_query("select count(*) from %s" % fq_tbl_name)
     assert(len(result.data) == 1)
     assert(result.data[0] == str(num_rows))
+
+class TestUncompressedText(ImpalaTestSuite):
+  @classmethod
+  def get_workload(cls):
+    return 'functional-query'
+
+  @classmethod
+  def add_test_dimensions(cls):
+    super(TestUncompressedText, cls).add_test_dimensions()
+    cls.ImpalaTestMatrix.add_constraint(lambda v:
+        v.get_value('table_format').file_format == 'text' and
+        v.get_value('table_format').compression_codec == 'none')
+
+  # IMPALA-5315: Test support for date/time in unpadded format
+  def test_scan_lazy_timestamp(self, vector, unique_database):
+    self.client.execute(("""CREATE TABLE {0}.lazy_ts (ts TIMESTAMP)""").format
+          (unique_database))
+    tbl_loc = get_fs_path("/test-warehouse/%s.db/%s" % (unique_database,
+          "lazy_ts"))
+    check_call(['hdfs', 'dfs', '-copyFromLocal', os.environ['IMPALA_HOME'] +
+          "/testdata/data/lazy_timestamp.csv", tbl_loc])
+    self.run_test_case('QueryTest/select-lazy-timestamp', vector, unique_database)
